refactor: pequena melhoria no código